# Rasm

./: .coderabbit.yaml  .coverage.runsettings  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  ELEMENT-REBUILD-PLAN.md  HANDOFF.tmp.md  LICENSE  NuGet.config  PYTHON_QUALITY_TOOLING.md  RASM-COMPONENT-PARADIGM-DECISION.md  RASM-CS-APPHOST-BRIEF.md  RASM-CS-APPUI-BRIEF.md  RASM-CS-COMPUTE-BRIEF.md  RASM-CS-FABRICATION-BRIEF.md  RASM-CS-FABRICATION-DECISION.md  RASM-CS-GEOMETRY-BRIEF.md  RASM-CS-GEOMETRY-DECISION.md  RASM-CS-PERSISTENCE-BRIEF.md  RASM-CS-PERSISTENCE-DECISION.md  RASM-GENERATION-SPEC.md  RASM-PY-ARTIFACTS-BRIEF.md  RASM-PY-ARTIFACTS-DECISION.md  RASM-PY-COMPUTE-BRIEF.md  RASM-PY-DATA-BRIEF.md  RASM-PY-GEOMETRY-BRIEF.md  RASM-PY-RUNTIME-BRIEF.md  RASM-REBUILD-DECISION.md  RASM-REBUILD-SCOPE.md  RASM-TESTING-DECISION.md  RASM-TS-PLATFORM-DECISION.md  README.md  SPIKE-INFRA-NOTES.md  TODO-capability-gaps.md  (+27 more)
.archive/: RASM-CS-COMPUTE-BRIEF.md  RASM-PY-DATA-BRIEF.md
.claude/: README.md  settings.json
.claude/agents/: code-reviewer.md  docs-researcher.md  freshness-integrator.md  infra-custodian.md  playwright-test-generator.md  playwright-test-planner.md  pr-fixer.md  prose-reviewer.md  reviewer-harvest.md  skill-summarizer.md  style-analyzer.md  style-corrector.md
.claude/commands/: coderabbit-review.md  create-agent.md  create-command.md  docs.md  freshen.md  git-commit-push-pr.md  prime.md  snapshot.md
.claude/hooks/: agent-attention.sh  setup-env.sh  validate-spec.sh
.claude/output-styles/: defensive-programmer.md  functional-purist.md
.claude/prompts/: 1-ideate-pass.md  2-refine-pass.md  3-implement-pass.md  3-targeted-implement.md  assay-ab-test-session.md  assay-closeout-session.md  assay-finalization-session.md  assay-refine-session.md  new-packages-campaign.md  skill-quality-campaign.md  targeted-implement.md  tool-rebuild.md
.claude/rules/: git-conventions.md  monorepo.md  observability.md  paradigms.md  testing.md
.claude/scratch/: SESSION-HANDOFF.md  geometry-acceptance.md  geometry-run-ledger.md
.claude/scripts/: bootstrap-cli-tools.sh
.claude/styles/: report.md
.claude/workflows/: align-cards.js  align-cs.js  ascend-tests-infra.js  bim-rebuild.js  bim-residual-triage.js  brief-cs-folder.js  brief-py-folder.js  brief-track-review.js  brief-ts-folder.js  brief.js  build-ts.js  class-c-sweep.js  cold-verify.js  component-panel-build.js  convert-host-finish.js  convert-host.js  convert-rasm-kernel.js  cs-finalize.js  density.js  design-artifacts-restructure.js  design-component-paradigm.js  design-cs-fabrication.js  design-cs-geometry.js  design-cs-persistence.js  design-python-domain.js  design-python-numerics.js  docgen-pass.js  element-api-authoring.js  element-architect-build.js  element-component-finalize.js  element-component.js  element-harden.js  element-residual-fix.js  energy-parity.js  estate.js  finalize.js  harden-api-batch.js  harden-python-core.js  hygiene-sweep.js  ideate.js  (+62 more)
.config/: coverage-mutmut.ini  coverage-subprocess.ini  dotnet-tools.json  stryker-config.json  stryker.config.json
.cursor/: BUGBOT.md
.cursor/bugbot/: stale-rejections.md
.cursor/research/: rasm-cursor-infrastructure.md
.cursor/rules/: README.md  rasm-analysis-domain.mdc  rasm-bash-scripts.mdc  rasm-bridge-scenarios.mdc  rasm-core.mdc  rasm-csharp-production.mdc  rasm-csharp-specs.mdc  rasm-csharp-tests.mdc  rasm-dependencies.mdc  rasm-docs-architecture.mdc  rasm-docs-markdown.mdc  rasm-docs-reference.mdc  rasm-grasshopper.mdc  rasm-materials.mdc  rasm-monorepo-navigation.mdc  rasm-prose.mdc  rasm-quality-operator.mdc  rasm-rhino-bridge.mdc  rasm-rhino-categories.mdc  rasm-rhino-exchange-camera-blocks.mdc  rasm-rhino-ui.mdc  rasm-testkit.mdc  rasm-vectors.mdc  user-rules-bootstrap.txt
.greptile/: config.json  files.json  rules.md
.macroscope/: ignore.md
.macroscope/check-run-agents/: api-stacking.md  architecture-integrity.md  cross-folder-parity.md  doctrine.md  folder-architecture.md  rulings-drift.md  script-correctness.md  skill-integrity.md  strata-leverage.md  strongest-form.md  test-adversary.md  topology-closure.md
.planning/audit/: REFINEMENT_PLAN.md  wave1-A.findings.jsonl  wave1-A.summary.md  wave1-B.findings.jsonl  wave1-B.summary.md  wave1-C.findings.jsonl  wave1-C.summary.md  wave1-D.findings.jsonl  wave1-D.summary.md
.planning/deferred/: grasshopper-extraction-followups.md
.rules/python/: no-direct-annotations.yml  no-helper-import.yml  no-typing-no-type-check.yml
.rules/typescript/: ts-domain-no-let.yml  ts-domain-no-statement-flow.yml
_context-poison-audit-2026-06-06/: final-report.md
_context-poison-audit-2026-06-06/agent-reports/: 01-standards-root-shared.md  02-standards-root-shared-adversarial.md  03-standards-explanation.md  04-standards-reference.md  05-standards-task-learning.md  06-standards-systemic-crosscut.md  07-docs-non-standards.md  08-repo-instructions-prompts.md  09-project-claude-skills.md  10-home-codex-skills.md  11-home-claude-active.md  12-code-comments-tools.md  README.md
_context-poison-audit-2026-06-06/finding-buckets/: 01-standards-corpus.md  02-project-docs-and-tool-docs.md  03-repo-instructions-and-prompts.md  04-project-skills.md  05-home-global-surfaces.md
apps/: README.md
apps/cs-analyzer/: CsAnalyzer.csproj  DomainStandardsAnalyzer.cs
apps/grasshopper/: Rasm.Grasshopper.csproj
apps/py_analyzer/: __init__.py  cli.py  (+2 more)
docs/: AGENTS.md  README.md  host-libraries.md  rhino-gh2-api-ledger.md  usage.md
rebuild-handoff/: investigation-discover.md  investigation-rebuild.md  investigation-research.md  properties-residuals.md  residuals.json
research-prompts/: 1-initial.md  2-hygiene.md  3-consolidate.md  4-refine-bedrock.md  5-divergent.md  6-distill.md
scripts/: check-cs.sh  mutate-cs.sh  rhino.sh  test.sh
tests/: README.md  RULINGS.md  TESTING_BACKLOG.md  _aspect.py  _bench.py  _seams.py  _spec.py  _strategies.py  conftest.py  containers.json  test_pytest_policy.py
(+6363 files in other folders)
