[project]
name = "workspace-foundation-python"
version = "0.1.0"
requires-python = ">=3.15"
dependencies = [
    "anyio>=4.14.0",
    "protobuf>=6.33,<7.0",       # runtime transport wire codec; capped <7.0 by opentelemetry-proto (no OTel release admits protobuf 7.x yet); lift the cap when it does. cp310-abi3+py3-none-any => cp315-clean
    "grpcio>=1.81",              # runtime: gRPC transport (server/serve ServerHost); resolves on cp315, already transitive core via google-cloud-storage
    "findiff>=0.13.1; python_version<'3.15'", # compute finite-difference floor for solvers/sensitivity; gated by transitive scipy CPython 3.15 wheel lag
    "beartype>=0.22.2",
    "cyclopts>=4.18.0",
    "msgspec>=0.21.1",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-instrumentation-grpc>=0.62b0",  # runtime: gRPC server/client span instrumentation for server/serve
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "expression>=5.6.0",
    "stamina>=26.1.0",
    "structlog>=26.1.0",
    "psutil>=7.2.2",
    "fsspec>=2026.6.0",
    "s3fs>=2026.6.0",             # data: S3 fsspec backend for shared-pull artifact reads
    "gcsfs>=2026.6.0",            # data: GCS fsspec backend for shared-pull artifact reads
    "obstore>=0.10.1",            # data: abi3 object_store backend while cloud-storage wheels lag on CPython 3.15
    "httpx>=0.28.1",              # transport: approved HTTP client surface for typed adapters
    "watchfiles>=1.2.0",
    "apscheduler>=3.11.2",        # runtime: cron, interval, and date triggers (sole cron owner; aiocron purged)
    "universal-pathlib>=0.3.10",  # data: UPath storage_options/protocol resolution for the fsspec artifact store
    "asyncssh>=2.23.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "keyring",                    # runtime: OS keychain credential boundary; never probe unattended
    "zstandard>=0.23.0",          # tooling: zstd compression for the tools.assay logging/cache rail; root-tool dependency, always available
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "dirty-equals",
    "hypothesis>=6.155.3",
    "inline-snapshot",
    "moto[server]>=5.2.2",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-deadfixtures>=3.1.0",
    "pytest-randomly>=4.1.0",
    "pytest-socket>=0.8.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.17,<0.16",
    "squawk-cli>=2.58.0",
    "ty>=0.0.50",
    "types-psutil>=7.2.2.20260518",
    "validate-pyproject[all]",
]
mutation = ["mutmut>=3.6.0"]
scientific = [
    "adbc-driver-manager",                         # data: ADBC driver manager for Arrow Flight SQL and DuckDB; Cython source-build on CPython 3.15
    "arro3-core>=0.8.1",                           # data: abi3 Arrow core bridge while pyarrow CPython 3.15 support stabilizes
    "arviz>=1.2.0; python_version<'3.15'",         # compute: Bayesian diagnostics; gated by scipy/Pythran CPython 3.15 lag
    "awkward>=2.9.1",                              # data: ragged arrays; pure Python
    "compas>=2.15.1; python_version<'3.15'",       # geometry: algebra toolkit; gated by scipy-family CPython 3.15 lag
    "connectorx>=0.4.5; python_version<'3.15'",    # data: SQL-to-Arrow loader; Rust/maturin lacks CPython 3.15 wheel
    "cubed>=0.28.0",                               # data: bounded-memory distributed arrays; pure Python
    "dask",
    "deltalake",                                   # data: lakehouse tables; abi3 wheel on CPython 3.15
    "duckdb",                                      # data: analytical SQL engine; source-builds on CPython 3.15
    "geopandas",                                   # geometry: geospatial frames; source-build via Parametric_Forge scientific toolchain
    "h5py>=3.16.0",                                # data: HDF5 arrays; source-build via Parametric_Forge HDF5 toolchain
    "icechunk>=2.0.6; python_version<'3.15'",      # data: versioned tensor store; Rust pyo3 lacks CPython 3.15 wheel
    "ibis-framework>=12.0.0",                      # data: backend-agnostic SQL-expression IR
    "jax>=0.10.1; python_version<'3.15'",          # compute: XLA accelerator; jaxlib lacks CPython 3.15 wheel
    "laspy>=2.7.0",                                # geometry: LAS/LAZ point-cloud IO; pure Python
    "meshio",
    "nanoarrow>=0.8.0",                            # data: Arrow C-data interop; meson/Cython source-build
    "narwhals>=2.22.1",                            # data: dataframe-agnostic API; pure Python
    "netcdf4>=1.7.4",                              # compute: CFD and field IO; source-build via Parametric_Forge netCDF toolchain
    "networkx",
    "numba>=0.65.1; python_version<'3.15'",        # compute: LLVM JIT accelerator; numba/llvmlite lacks CPython 3.15 wheel
    "numpy>=2.0",                                  # compute: array substrate; 2.x ships CPython 3.15 wheels
    "numpyro>=0.21.0; python_version<'3.15'",      # compute: JAX NUTS sampler; gated by jaxlib CPython 3.15 floor
    "onnx>=1.22.0",                                # compute: model graph IR; cp312-abi3 wheel on CPython 3.15
    "onnxruntime>=1.27.0; python_version<'3.15'",  # compute: model runtime; no CPython 3.15 wheel
    "optimistix>=0.1.0; python_version<'3.15'",    # compute: JAX nonlinear solvers and adjoint VJP; gated by jaxlib CPython 3.15 floor
    "pandas",                                      # data: dataframe substrate; source-builds on CPython 3.15
    "pandas-stubs",
    "pandera>=0.31.1",                             # data: schema and quality-rule contracts; records validation claims without enforcing
    "pdal>=3.5.3; python_version<'3.15'",          # geometry: point-cloud pipeline; sdist-only, prefer conda; no CPython 3.15 wheel
    "pint",
    "polars",                                      # data: dataframe engine; CPython 3.15 wheel
    "pyarrow>=23.0.0,<24",                         # data: Arrow C++ bridge; source-build via Parametric_Forge Arrow toolchain
    "pye57>=0.4.19; python_version<'3.15'",        # geometry: E57 scan IO; C++ extension lacks CPython 3.15 wheel
    "pymc>=6.0.1; python_version<'3.15'",          # compute: probabilistic programming; pytensor/numba/llvmlite gates CPython 3.15
    "pyogrio>=0.12.1",                             # geometry: GDAL vector IO; source-build via Parametric_Forge GDAL toolchain
    "pyproj>=3.7.2",                               # geometry: PROJ coordinate transforms; source-build via Parametric_Forge PROJ toolchain
    "python-flint>=0.8.0; python_version<'3.15'",  # compute: Arb interval numerics; LGPL-2.1+ runtime, no CPython 3.15 wheel
    "rasterio>=1.5.0",                             # data: raster geospatial IO; source-build via Parametric_Forge GDAL toolchain
    "rhino3dm>=8.17.0",                            # geometry: Rhino mesh and 3DM IO; CMake C++ source-build
    "rustworkx>=0.17.1",                           # compute/data: graph algorithms; abi3 wheel on CPython 3.15
    "salib; python_version<'3.15'",                # compute: global sensitivity analysis; transitively pulls scipy (gast/pythran lack CPython 3.15 support), companion-band until the scientific stack ships 3.15
    "clarabel; python_version<'3.15'",             # compute: Clarabel conic solver / cvxpy backend; transitively pulls scipy (gast/pythran lack CPython 3.15 support), companion-band until the scientific stack ships 3.15
    "pywavelets>=1.9.0; python_version<'3.15'",    # compute: discrete/continuous wavelet transforms; C/Cython lacks CPython 3.15 wheel
    "lark",                                        # geometry: IDS/selector parsing-grammar engine; pure Python, cp315-clean
    "pystac",                                      # data: STAC item/collection object model; pure Python
    "pystac-client",                               # data: STAC API search/discovery client; pure Python
    "stac-geoparquet",                             # data: STAC item GeoParquet table interchange; pure Python
    "array-api-compat",                            # compute: array API portability shim
    "array-api-extra",                             # compute: supplemental array API helpers
    "mpmath",                                      # compute: arbitrary-precision real and complex math
    "pylance",                                     # data: Lance columnar/vector format; abi3 wheel on CPython 3.15
    "virtualizarr",                                # data: archival reference aggregation into virtual Zarr
    "compas_dr; python_version<'3.15'",            # geometry: COMPAS dynamic relaxation; gated by compas CPython 3.15 floor
    "compas_tna; python_version<'3.15'",           # geometry: COMPAS thrust-network analysis; gated by compas CPython 3.15 floor
    "diffrax; python_version<'3.15'",              # compute: JAX differential-equation solvers; gated by jaxlib CPython 3.15 floor
    "equinox; python_version<'3.15'",              # compute: JAX PyTree modules; gated by jaxlib CPython 3.15 floor
    "lineax; python_version<'3.15'",               # compute: JAX linear solvers; gated by jaxlib CPython 3.15 floor
    "interpax>=0.3.14; python_version<'3.15'",     # compute: JAX interpolation/splines; gated by jaxlib CPython 3.15 floor
    "quadax>=0.2.13; python_version<'3.15'",       # compute: JAX adaptive quadrature; gated by jaxlib CPython 3.15 floor
    "optax; python_version<'3.15'",                # compute: first-order JAX optimizers threaded through optimistix.OptaxMinimiser; gated by jaxlib CPython 3.15 floor
    "cvxpy>=1.9.1; python_version<'3.15'",         # compute: disciplined convex optimization; cp311-cp314 wheels only, no CPython 3.15 wheel
    "manifold3d; python_version<'3.15'",           # geometry: robust mesh booleans; C++ pybind lacks CPython 3.15 wheel
    "sectionproperties>=3.10; python_version<'3.15'", # geometry: cross-section property solver; pure-py (py3-none-any), own metadata >=3.11 unbounded; gated by transitive cytriangle (LGPLv3 native ext) cp314 wheel ceiling
    "nutpie; python_version<'3.15'",               # compute: Rust NUTS sampler for PyMC; gated by PyMC CPython 3.15 floor
    "pyiceberg; python_version<'3.15'",            # data: Apache Iceberg tables; gated by Arrow/data CPython 3.15 floor
    "skl2onnx; python_version<'3.15'",             # compute: sklearn-to-ONNX converter; gated by scikit-learn CPython 3.15 floor
    "scikit-fem>=12.0.2; python_version<'3.15'",   # compute: FEM assembly; gated by scipy-family CPython 3.15 lag
    "scikit-image>=0.26.0; python_version<'3.15'", # artifacts: image processing; C/Cython lacks CPython 3.15 wheel
    "scikit-learn>=1.9.0; python_version<'3.15'",  # compute: classical ML and ONNX export; no CPython 3.15 wheel
    "scipy>=1.17.1; python_version<'3.15'",        # compute: numerical algorithms; scipy/Pythran lacks CPython 3.15 beta support
    "scipy-stubs",
    "shapely>=2.1.2",                              # geometry: planar operations; source-build via Parametric_Forge GEOS toolchain
    "sparse>=0.18.0; python_version<'3.15'",       # data: sparse n-D arrays; numba/llvmlite gates CPython 3.15, scipy.sparse covers sparse LA
    "sympy",
    "trimesh",
    "uncertainties",
    "xarray",
    "xxhash>=3.7.0",                               # runtime: content identity hashes matching C# System.IO.Hashing; cp38-cp314 per-version wheels, NO abi3/cp315 (companion <3.15)
    "grpcio-tools; python_version<'3.15'",         # runtime: gRPC protoc codegen companion (dev/build only); protoc bundle lacks cp315 wheel
    "zarr>=3.2.1",                                 # data: chunked n-D arrays; pure Python
    "blackjax; python_version<'3.15'",             # compute: JAX NUTS/HMC samplers; gated by jaxlib CPython 3.15 floor
    "cadquery-ocp; python_version<'3.15'",         # geometry: OpenCASCADE STEP/AP242 kernel; requires_python <3.15, companion-side
    "kiss-matcher; python_version<'3.13'",         # geometry: global point-cloud registration; cp38-cp312 wheels only
    "bcf-client; python_version<'3.15'",           # geometry: BCF 3.0 coordination XML (imports bcfxml/bcfapi); lxml-dependent, companion-side
    "dataframely",                                 # data: polars-native declarative column rules with FailureInfo partition reporting
    "pointblank",                                  # data: graded data-quality observability tier above pass/fail gates
    "sqlglot",                                     # data: pure-Python SQL parser/transpiler/optimizer and lineage gate; centralizes the ibis transitive
    "daft",                                        # data: distributed/streaming out-of-core engine with cp315-clean lakehouse reads
    "fastexcel",                                   # data: calamine Rust Arrow Excel reader closing the spreadsheet DatasetKind gap
    "flox; python_version<'3.15'",                 # data: vectorized/parallel grouped reductions xarray defers to; scipy-gated, companion until scipy ships cp315
    "igraph",                                      # data: C-core Leiden/Louvain/Infomap community detection rustworkx lacks
    "rioxarray",                                   # data: rasterio accessor bridging ndarray to CF DataArray and COG raster write
    "odc-stac",                                    # data: lazy dask cube from discovered STAC items via odc.stac.load
    "planetary-computer",                          # data: STAC URL signing for Client.open modifier and odc.stac patch_url
    "datafusion",                                  # data: system-builder federation/streaming engine with Substrait plan interchange
    "polars-st",                                   # data: spatial-typed polars frames for the DGGS/spatial-frame plane
    "h3ronpy",                                     # data: Arrow-native H3 cell ops on polars frames for the DGGS surface
    "adbc-driver-flightsql",                       # data: Arrow Flight SQL distributed remote driver with grpc+tls and OAuth2
    "xarray-spatial; python_version<'3.15'",       # data: raster terrain analytics (slope/aspect/hillshade/viewshed); numba runtime gate, lazy import on companion
    "tensorstore; python_version<'3.15'",          # data: high-throughput async zarr-v3 reader over the same on-disk format zarr writes
    "geoarrow-rust-compute; python_version<'3.15'",# data: GeoRust on GeoArrow memory replacing the GEOARROW byte-roundtrip
    "lazrs; python_version<'3.15'",                # data: compressed-COPC LAZ backend for laspy.copc
    "laszip; python_version<'3.15'",               # data: alternate compressed-COPC LAZ backend for laspy.copc
]
artifacts = [
    "altair",
    "brotli; python_version<'3.15'",               # artifacts: compression; no CPython 3.15 wheel
    "colour-science>=0.4.6",                       # artifacts: color science for CIE, spectral, and appearance models; pure Python
    "fonttools>=4.63.0",                           # artifacts: font subsetting, instancing, and shaping metadata; pure Python
    "jinja2>=3.1.6",                               # artifacts: report templating between visual and document outputs
    "lxml; python_version<'3.15'",                 # artifacts: XML processing; no CPython 3.15 wheel
    "lz4; python_version<'3.15'",                  # artifacts: compression; no CPython 3.15 wheel
    "matplotlib; python_version<'3.15'",           # artifacts: plotting; contourpy/kiwisolver lack CPython 3.15 wheels
    "nbclient>=0.11.0",                            # artifacts: headless notebook execution client; pure Python
    "openpyxl",
    "papermill>=2.7.0",                            # artifacts: parameterized notebook runs; pure Python
    "pikepdf",
    "pillow; python_version<'3.15'",               # artifacts: image IO; no CPython 3.15 wheel
    "py7zr",
    "pyhanko>=0.35.1",                             # artifacts: PDF digital signing and PAdES; pure Python
    "pymupdf",
    "pypdf",
    "pypdfium2",
    "pyvista>=0.48.4; python_version<'3.13'",      # artifacts: 3D scientific visualization; gated by VTK interpreter floor
    "python-barcode",                              # artifacts: linear/2D barcode symbologies beside the segno QR arm; pure Python
    "python-docx",
    "python-magic",
    "python-pptx",
    "segno",                                       # artifacts: QR/Micro-QR vector codes; pure Python (replaces qrcode, removes Pillow leak)
    "svgelements",                                 # artifacts: pure-Python SVG geometry/transform/parse for figure scale-to-fit/n-up/crop/bounds; cp315-clean
    "reportlab",
    "ruamel-yaml",
    "tomlkit",
    "vl-convert-python",
    "vtk>=9.6.2; python_version<'3.13'",           # artifacts: VTK engine for pyvista; no CPython 3.15 wheel
    "weasyprint",
    "great-tables",                                # artifacts: publication-quality display tables
    "uharfbuzz",                                   # artifacts: HarfBuzz text-shaping bindings
    "typst",                                       # artifacts: Typst PDF typesetting; cp38-abi3 wheel (installs on 3.15)
    "vegafusion; python_version<'3.15'",           # artifacts: server-side Vega transform/pre-transform export; Rust, gated
    "ocrmypdf",                                    # artifacts: OCR-to-PDF/A with sidecar text; needs Forge native tesseract+ghostscript+leptonica (libheif for pi-heif HEIF input)
    "pdfplumber",                                  # artifacts: ruled-table extraction over pdfminer.six, complements pymupdf bulk text
    "docxtpl",                                     # artifacts: template-driven .docx authoring over python-docx + jinja2
    "msoffcrypto-tool",                            # artifacts: ECMA-376 Office decrypt/encrypt confidentiality counterpart to PDF
    "odfpy",                                       # artifacts: ODF write for OpenDocument text/spreadsheet/presentation trees
    "xlsxwriter",                                  # artifacts: streaming write-only xlsx at near-constant memory; promoted transitive->explicit
    "nbconvert",                                   # artifacts: host-free executed-notebook to HTML/Markdown report export
    "jupytext",                                    # artifacts: round-trip notebooks to/from py:percent/md:myst text source
    "coloraide",                                   # artifacts: oklch gamut mapping and CVD filters disjoint from colour-science
    "blackrenderer",                               # artifacts: COLRv1 color-glyph SVG rasterization over fonttools + HarfBuzz
    "c2pa-python",                                 # artifacts: cross-format C2PA content credentials distinct from PAdES
    "stream-zip",                                  # artifacts: bounded-memory streaming zip with ZIP64/AES-256
    "detools",                                     # artifacts: binary-delta engine (bsdiff/hdiffpatch superset) replacing bsdiff4
    "resvg-py",                                    # artifacts: in-process SVG->PNG/PDF rasterization with no system cairo
    "av",                                          # artifacts: PyAV video/audio/mux encode; bundles FFmpeg (abi3 cp311, cp315-clean)
    "pyvips",                                      # artifacts: fused decode+downscale+ICC and smartcrop; needs Forge native libvips
    "lets-plot; python_version<'3.15'",            # artifacts: host-free grammar-of-graphics self-render to svg/png/pdf bytes
    "python-calamine; python_version<'3.15'",      # artifacts: fast Rust xlsx/xlsb/xls/ods reader closing the spreadsheet/ODF read inverse
    "usd-core; python_version<'3.15'",             # artifacts: USD/USDZ scene packaging beside the vtk USD exporter
    "zxing-cpp; python_version<'3.15'",            # artifacts: 2D matrix codes (DataMatrix/PDF417/Aztec/MaxiCode) read/write
    "stream-unzip; python_version<'3.15'",         # artifacts: streaming decompress inverse for stream-zip
]

# --- [UV] ------------------------------------------------------------------

[tool.uv]
package =        false
cache-dir =      ".cache/uv"
default-groups = ["dev", "mutation"]

[tool.uv.sources]
beartype = { git = "https://github.com/beartype/beartype.git", rev = "f370a0b1733413681e7a72bf36fbe839e60b3c85" }

# --- [TY] ------------------------------------------------------------------

[tool.ty.environment]
python-platform = "all"
python-version = "3.15"

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.src]
exclude = [
    ".approval_tests_temp",
    ".artifacts",
    ".cache",
    ".claude/skills/**/.cache",
    ".claude/worktrees",
    ".nx",
    ".venv",
    "coverage",
    "mutants",
    "node_modules",
    "test-results",
    "tests/ast-grep/fail/**",
    "tests/ast-grep/pass/**",  # structural probe corpus; ast-grep verification owns pass/fail semantics
    "tmp",
]

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

# --- [MYPY] ----------------------------------------------------------------

# `ty` is the binding type gate; mypy is advisory for `tools/assay` and `tests`.
# Mypy-only divergences stay in overrides because `ty` rejects inline type-ignore comments.
[tool.mypy]
files =                   ["tools/assay", "tests"]
python_version =          "3.15"
cache_dir =               ".cache/mypy"
strict =                  true
pretty =                  true
warn_unreachable =        true
explicit_package_bases =  true
warn_unused_configs =     true
disallow_any_explicit =   true
disallow_any_unimported = true
plugins =                 ["pydantic.mypy"]
enable_error_code = [
    "exhaustive-match",
    "explicit-override",
    "ignore-without-code",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
]
exclude = [
    "^\\.approval_tests_temp/",
    "^\\.artifacts/",
    "^\\.cache/",
    "^\\.claude/skills/.*/\\.cache/",
    "^\\.claude/worktrees/",
    "^\\.git/",
    "^\\.nx/",
    "^\\.venv/",
    "^build/",
    "^dist/",
    "^coverage/",
    "^mutants/",
    "^test-results/",
    "^node_modules/",
    "^tests/ast-grep/fail/",
    "^tests/ast-grep/pass/",
    "^tmp/",
]

[tool.pydantic-mypy]
init_typed =                    true
init_forbid_extra =             true
warn_required_dynamic_aliases = true
warn_untyped_fields =           true

# `tests/**` stays `ty`-clean; these relaxations isolate strict-mypy lag around TypeForm, sentinel, Callable, match, and ctor narrowing.
[[tool.mypy.overrides]]
module =                  "tests.*"
disallow_any_explicit =   false
disallow_any_unimported = false
warn_unreachable =        false
disable_error_code =      ["func-returns-value", "attr-defined", "type-arg", "override", "arg-type"]

[[tool.mypy.overrides]]
module =                 ["fsspec", "fsspec.*", "boto3", "boto3.*"]  # backend imports lack py.typed coverage
ignore_missing_imports = true

# --- [PYTEST] --------------------------------------------------------------

# `pytest-benchmark` and `pytest-xdist` stay in separate sessions under `filterwarnings = ["error"]`.
# Do not add `-n` to default `addopts`; parallel runs must unload benchmark config explicitly.
[tool.pytest]
minversion =               "9.0"
strict =                   true
cache_dir =                ".cache/pytest"
testpaths =                ["tests"]
pythonpath =               ["."]
python_files =             ["test_*.py", "*_test.py", "bench_*.py"]
python_functions =         ["test_*", "bench_*"]
collect_imported_tests =   false
empty_parameter_set_mark = "fail_at_collect"
addopts = [
    "-p",
    "tests.python._testkit.runtime",  # testkit runtime plugin loads profiles, OTel, and markers before pytest config
    "-x",
    "--tb=short",
    "--import-mode=importlib",
    "-m",
    "not benchmark",
    "--disable-socket",
    "--allow-unix-socket",
    "--benchmark-storage=file://.artifacts/python/benchmarks",  # benchmark artifacts route through the Assay catalog URI
    "--hypothesis-profile=rasm",
]
filterwarnings = ["error"]
timeout = "30"  # pytest-timeout registers this option as a string; pytest 9 TOML mode rejects a native int
required_plugins = [
    "anyio",
    "hypothesis",
    "inline-snapshot",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-randomly",
    "pytest-socket",
    "pytest-timeout",
    "pytest-xdist",
]
markers = [
    "benchmark: benchmark measurement tests",
    "mutation: mutation-testing acceptance and survivor-triage tests",
    "network: tests that need real INET sockets lifted (loopback servers or egress); excluded from mutation lanes",
    "property: property-based tests",
]

[tool.anyio]
asyncio_mode = "auto"

# --- [INLINE_SNAPSHOT] -----------------------------------------------------

[tool.inline-snapshot]
default-flags = ["short-report"]  # reports mismatches without mutating snapshots
storage-dir =   ".cache/inline-snapshot"

# --- [COVERAGE] ------------------------------------------------------------

[tool.coverage.run]
branch =          true
relative_files =  true      # subprocess coverage combines through relative repo paths
source =          ["tools/assay"]
data_file =       ".cache/coverage/.coverage"
core =            "sysmon"  # CPython 3.15 beta lacks coverage's compiled C tracer

[tool.coverage.report]
fail_under =    95  # sysmon captures fewer arcs than the unavailable C core
show_missing =  true
skip_covered =  true
exclude_also = [
    "if TYPE_CHECKING:",
    "assert_never\\(",
    "\\.\\.\\.$",
    "if __name__ == .__main__.:",
]

[tool.coverage.json]
output = ".artifacts/python/coverage/coverage.json"
pretty_print = true
show_contexts = true

[tool.coverage.html]
directory = ".artifacts/python/coverage/html"
show_contexts = true

[tool.coverage.xml]
output = ".artifacts/python/coverage/coverage.xml"

[tool.coverage.lcov]
output = ".artifacts/python/coverage/coverage.lcov"

# --- [MUTMUT] --------------------------------------------------------------

[tool.mutmut]
source_paths = ["tools/assay"]                                    # Mutation runs through the Assay-staged workdir; retired `.cache/mut-venv` and requirements fallbacks stay retired.
pytest_add_cli_args_test_selection = ["tests/python/tools/assay"] # Mutmut's type-check prefilter raises on unrelated checker diagnostics; tests remain the kill mechanism.
pytest_add_cli_args = [
    "--hypothesis-profile=rasm-mutation",
    "-o",
    "required_plugins=",                                          # mutmut disables pytest-randomly, so this invocation waives the required-plugins guard
    "-m",
    "not benchmark and not network",
    # Subprocess tests execute the unmutated CLI outside mutmut's copied tree; deselect them for mutation.
    "--deselect",
    "tests/python/tools/assay/test_main.py::test_main_subprocess_exit_code",
    "--deselect",
    "tests/python/tools/assay/test_main.py::test_main_subprocess_bootstrap_error_config_fault",
    "--deselect",
    "tests/python/tools/assay/test_main.py::test_main_subprocess_failing_rail_channel_separation",
    "--deselect",
    "tests/python/tools/assay/test_main.py::test_main_subprocess_human_renderer_console_stderr",
]
do_not_mutate = ["tools/assay/__init__.py", "tools/assay/rails/mutation_gate.py"]
mutate_only_covered_lines = true  # mutation run supplies absolute-keyed coverage data for mutmut's covered-line map
max_stack_depth = -1              # disables mutmut's strict stack walk over importlib pseudo-filenames

# --- [RUFF] ----------------------------------------------------------------

[tool.ruff]
cache-dir =        ".cache/ruff"
preview =          true
line-length =      150
required-version = ">=0.15.17,<0.16"
target-version =   "py315"
extend-exclude = [
    "**/.approval_tests_temp/**",
    "**/.artifacts/**",
    "**/.cache/**",
    "**/.claude/skills/**/.cache/**",
    "**/.claude/worktrees/**",
    "**/test-results/**",
    "**/coverage/**",
    "**/mutants/**",
    "**/.history/**",
    "**/tests/ast-grep/**",
]

[tool.ruff.format]
line-ending =               "lf"
docstring-code-format =     true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- [FORMATTER]
    "COM812",  # ruff format owns trailing commas
    "ISC001",  # ruff format owns implicit string concatenation
    # --- [MATCH_DISPATCH]
    "RET504",  # named intermediates keep flow pipelines readable
    "RET505",  # explicit match dispatch keeps exhaustive arms visible
    "RET506",  # explicit error branches keep ROP rails visible
    "SIM108",  # match/case owns dispatch, not ternaries
    "SIM114",  # match/case owns dispatch, not merged if arms
    # --- [ERROR_RAILS]
    "EM101",   # frozen errors carry inline messages
    "EM102",   # error constructors carry formatted context
    "TRY003",  # domain errors carry descriptive messages
    "TRY301",  # `@safe` ROP boundaries may raise inside the guarded call
    "TRY400",  # structlog `.error()` is valid outside exception handlers
    # --- [DOCSTRINGS]
    "DOC502",  # Raises sections may document propagated helper exceptions; DOC501 still requires direct raises
    # --- [SEMANTIC_ORDER]
    "RUF022",  # semantic public-surface order beats alphabetical `__all__`
    "RUF023",  # semantic slot order beats alphabetical `__slots__`
    # --- [WORKFLOW]
    "TD003",   # TODO links are not required for local maintenance notes
    "FIX002",  # TODO comments are accepted source markers
    "INP001",  # monorepo packages may be implicit namespaces
    "CPY001",  # top-level LICENSE owns copyright notice
    # --- [SECTION_DIVIDERS]
    "ERA001",  # compact `# --- [LABEL]` subsection dividers are source structure
]

[tool.ruff.lint.per-file-ignores]
"__init__.py"      = ["F401"]
"**/.claude/skills/**/scripts/**" = [
    "TC003",
    "ANN001",
    "ANN401",
    "B905",
    "C901",
    "E501",
    "ERA001",
    "EXE001",
    "FBT001",
    "PLC0415",
    "PLC2701",
    "PLC3002",
    "PLR0911",
    "PLR0912",
    "PLR0914",
    "PLR0915",
    "PLR6201",
    "PLW1510",
    "PTH109",
    "S105",
    "S310",
    "S404",
    "S603",
    "S607",
    "TID251",
    "TRY300",
]
"tools/py_analyzer/**" = ["PLR0912", "TC003"]
"tests/**"         = ["S101", "PLR2004", "PLR0913", "ARG001", "ARG002", "ANN201", "ANN401", "D101", "D102", "D103", "SLF001", "PLC2701"]  # PLC2701: specs import the private-by-design _testkit package
"**/adapters/**"   = ["ANN401"]
"**/conftest.py"   = ["E402", "F401", "ARG001"]
"tests/python/_testkit/runtime.py" = ["E402"]  # Hypothesis environment gates must precede imports

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any =      false
mypy-init-return =        true
suppress-dummy-args =     true
suppress-none-returning = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "beartype.BeartypeConf",
    "msgspec.Meta",
    "msgspec.field",
    "pydantic.ConfigDict",
    "pydantic.Field",
    "pydantic.PrivateAttr",
    "stamina.retry",
]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id", "type", "input", "format", "hash"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"dask.array" =     "da"
"dask.dataframe" = "dd"
"scipy" =          "sp"
"sympy" =          "sym"
"xarray" =         "xr"

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type =          "csv"
raises-extend-require-match-for = ["AttributeError", "KeyError", "RuntimeError", "TypeError", "msgspec.ValidationError", "pydantic.ValidationError",]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_validate", "_disc", "_check", "_value_"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports =        "all"
banned-module-level-imports = ["dask", "numpy", "pandas", "polars", "scipy", "sympy", "xarray"]
ban-lazy =                    "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"concurrent.futures.ProcessPoolExecutor".msg = "Use anyio.to_process.run_sync() — structured concurrency with cancellation support."
"concurrent.futures.ThreadPoolExecutor".msg =  "Use anyio.to_thread.run_sync() with CapacityLimiter — structured concurrency."
"abc.ABC".msg =                        "Use typing.Protocol — structural subtyping, no inheritance hierarchies."
"abc.abstractmethod".msg =             "Use typing.Protocol — structural subtyping replaces nominal."
"asyncio".msg =                        "Use anyio — run/sleep/gather/Lock/Event/Semaphore/Queue all have anyio equivalents."
"collections.namedtuple".msg =         "Use pydantic BaseModel(frozen=True) or msgspec.Struct(frozen=True) — namedtuple lacks runtime validation."
"contextlib.suppress".msg =            "Use Result rails or a marked boundary adapter — suppress hides fallibility."
"http.client".msg =                    "Use httpx behind a validated adapter — direct stdlib HTTP bypasses timeout, retry, and observability policy."
"json.dump".msg =                      "Use Path.write_bytes(msgspec.json.encode(obj)) — C-accelerated, struct-aware serialization."
"json.dumps".msg =                     "Use msgspec.json.encode() — C-accelerated, gc=False struct support, 5x+ stdlib perf."
"json.JSONDecoder".msg =               "Use msgspec.json.Decoder(type=T) — schema-validated, zero-copy deserialization."
"json.JSONEncoder".msg =               "Use msgspec.json.Encoder(enc_hook=fn) — custom serialization via hook, not class inheritance."
"json.load".msg =                      "Use msgspec.json.decode(Path.read_bytes(), type=T) — schema-validated, zero-copy."
"json.loads".msg =                     "Use msgspec.json.decode(buf, type=T) — schema-validated, zero-copy deserialization."
"logging.basicConfig".msg =            "Logging pipeline configured via structlog + OpenTelemetry — never configure stdlib directly."
"logging.critical".msg =               "Use structlog.get_logger().critical() — stdlib root logger bypasses structured pipeline."
"logging.debug".msg =                  "Use structlog.get_logger().debug() — stdlib root logger bypasses structured pipeline."
"logging.error".msg =                  "Use structlog.get_logger().error() — stdlib root logger bypasses structured pipeline."
"logging.exception".msg =              "Use structlog.get_logger().exception() — stdlib root logger bypasses structured pipeline."
"logging.getLogger".msg =              "Use structlog.get_logger() — stdlib logging bypasses structured pipeline."
"logging.info".msg =                   "Use structlog.get_logger().info() — stdlib root logger bypasses structured pipeline."
"logging.warning".msg =                "Use structlog.get_logger().warning() — stdlib root logger bypasses structured pipeline."
"os.environ".msg =                     "Use pydantic-settings BaseSettings — validated, typed config; never read env vars directly."
"os.getenv".msg =                      "Use pydantic-settings BaseSettings — validated, typed config at startup; not scattered env reads."
"pydantic.validator".msg =             "Use @field_validator or @model_validator — pydantic.validator is deprecated v1 API."
"requests".msg =                       "Use httpx behind a typed adapter — direct requests imports are not an approved transport surface."
"returns".msg =                        "Use expression.Result / expression.Option — returns is not an approved rail surface."
"returns.maybe".msg =                  "Use expression.Result / expression.Option — returns is not an approved rail surface."
"returns.result".msg =                 "Use expression.Result / expression.Option — returns is not an approved rail surface."
"socket.create_connection".msg =       "Use anyio networking or httpx adapters with explicit deadlines — direct sockets bypass boundary policy."
"socket.create_server".msg =           "Use anyio networking with explicit lifecycle ownership — direct sockets bypass boundary policy."
"socket.socket".msg =                  "Use anyio networking or a marked boundary adapter — raw sockets bypass deadline and observability policy."
"subprocess.call".msg =                "Use anyio.run_process() — async, cancellation-aware, structured concurrency."
"subprocess.check_call".msg =          "Use anyio.run_process() — async, cancellation-aware, structured concurrency."
"subprocess.check_output".msg =        "Use anyio.run_process() — async, cancellation-aware, structured concurrency."
"subprocess.Popen".msg =               "Use anyio.open_process() — async process handle with structured teardown."
"subprocess.run".msg =                 "Use anyio.run_process() — async, cancellation-aware, structured concurrency."
"time.sleep".msg =                     "Use anyio.sleep() — time.sleep blocks the event loop thread."
"traceback.print_exc".msg =            "Use structlog.get_logger().exception() — traceback.print_exc leaks to stderr."
"typing.Any".msg =                     "Use precise type parameters or object at validated boundaries; Any requires explicit boundary justification."
"typing.ParamSpec".msg =               "Use PEP 695 decorator parameters (**P) — legacy ParamSpec imports drift from current type syntax."
"typing.TypeAlias".msg =               "Use PEP 695 type aliases (`type Name = ...`) — TypeAlias is legacy syntax."
"typing.TypeGuard".msg =               "Use TypeIs — complement-safe narrowing in both branches is required."
"typing.TypeVar".msg =                 "Use PEP 695 type parameters — TypeVar is legacy generic syntax."
"typing.TypeVarTuple".msg =            "Use PEP 695 variadic type parameters — TypeVarTuple is legacy syntax."
"typing.cast".msg =                    "Use TypeGuard/TypeIs, validated adapters, or pattern narrowing; cast erases checker evidence."
"typing.NamedTuple".msg =              "Use pydantic BaseModel(frozen=True) or msgspec.Struct(frozen=True) — NamedTuple lacks runtime validation."
"typing.no_type_check".msg =           "Rasm type gates are mandatory — use a typed boundary adapter or refine the signature instead."
"typing.Optional".msg =                "Use Result/Option for fallibility; use T | None only for non-fallible absence."
"typing_extensions.Any".msg =          "Use precise type parameters or object at validated boundaries; Any requires explicit boundary justification."
"typing_extensions.cast".msg =         "Use TypeGuard/TypeIs, validated adapters, or pattern narrowing; cast erases checker evidence."
"typing_extensions.deprecated".msg =   "Deprecation markers are forbidden — refactor APIs immediately."
"typing_extensions.Optional".msg =     "Use Result/Option for fallibility; use T | None only for non-fallible absence."
"typing_extensions.ParamSpec".msg =    "Use PEP 695 decorator parameters (**P) — legacy ParamSpec imports drift from current type syntax."
"typing_extensions.TypeAlias".msg =    "Use PEP 695 type aliases (`type Name = ...`) — TypeAlias is legacy syntax."
"typing_extensions.TypeGuard".msg =    "Use TypeIs — complement-safe narrowing in both branches is required."
"typing_extensions.TypeVar".msg =      "Use PEP 695 type parameters — TypeVar is legacy generic syntax."
"typing_extensions.TypeVarTuple".msg = "Use PEP 695 variadic type parameters — TypeVarTuple is legacy syntax."
"urllib.request".msg =                 "Use httpx behind a typed adapter — direct urllib imports bypass transport policy."
"urllib3".msg =                        "Use httpx behind a typed adapter — urllib3 remains a transitive implementation detail."
"warnings.catch_warnings".msg =        "Deprecation/workaround warning flows are forbidden — refactor immediately."
"warnings.deprecated".msg =            "Deprecation decorators are forbidden — refactor APIs immediately."
"warnings.filterwarnings".msg =        "Do not filter/suppress warnings — remove deprecated paths and refactor immediately."
"warnings.simplefilter".msg =          "Do not filter/suppress warnings — remove deprecated paths and refactor immediately."
"warnings.warn".msg =                  "Deprecation/workaround warnings are forbidden — refactor immediately."
"warnings.warn_explicit".msg =         "Deprecation/workaround warnings are forbidden — refactor immediately."

[tool.ruff.lint.flake8-type-checking]
strict =                         true
exempt-modules =                 ["typing", "typing_extensions"]
runtime-evaluated-base-classes = ["msgspec.Struct", "pydantic.BaseModel", "pydantic.RootModel", "pydantic_settings.BaseSettings"]
runtime-evaluated-decorators =   ["beartype.beartype", "pydantic.computed_field", "pydantic.field_validator", "pydantic.model_validator", "pydantic.validate_call"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports =         true
force-sort-within-sections = true
lines-after-imports =        2
order-by-type =              false
split-on-trailing-comma =    false

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.field_validator", "pydantic.model_validator"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
ignore-var-parameters = true
convention =            "google"
ignore-decorators =     ["typing.overload", "typing.override"]
property-decorators =   ["pydantic.computed_field"]

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = false

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__get_pydantic_core_schema__", "__get_pydantic_json_schema__"]
allow-magic-value-types =   ["str", "bytes", "int"]
max-args = 8
max-bool-expr = 3
max-branches = 6
max-locals = 10
max-nested-blocks = 4
max-public-methods = 10
max-statements = 30
